--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Commons -->
-    <string name="app_name">Risiko Battle Sim</string>
+    <string name="app_name">Risiko Sim Free</string>
     <string name="action_settings">Settings</string>
     <string name="battle_result">Battle Result</string>
     <string name="step_by_step">Battle Step By Step</string>
